# measurement-workbox

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
docs/mw/: automate.html  index.html  io.html  matrix.html  model.html  mri.html  nmr.html  signal.html  stats.html
html/mw/: figure.html  image.html
mw/: __init__.py  automate.py  figure.py  image.py  io.py  matrix.py  model.py  mri.py  nmr.py  signal.py  stats.py
src/measurement_workbox/: __init__.py  __main__.py  automate.py  figure.py  image.py  in_out.py  io.py  matrix.py  ml.py  model.py  mri.py  nmr.py  signal.py  stats.py
src/mw/: automate.py  figure.py  io.py  matrix.py  signal.py
tests/: automate_tests.py  figure_tests.py  image_tests.py  io_tests.py  matrix_tests.py  model_tests.py  mri_tests.py  nmr_tests.py  scripting_test.py  signal_tests.py  stats_tests.py
