[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "measurement-workbox"
version = "0.0.2"
authors = [
  { name="Matthew Willmering", email="matt.willmering@gmail.com" },
]
description = "Library for processing, analyzing, and statistical assessments of measurements"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MattWill660/measurement-workbox.git"
"Bug Tracker" = "https://https://github.com/MattWill660/measurement-workbox/issues"